css/style.css
@import url('https://fonts.googleapis.com/css?family=Crimson+Text|Lora');

body{
    background-color: #02132d;
	width: 100%;
}

nav button {
    margin-right: 0;
    background-color: navy;
}

.carousel-item img{
    padding-top: 55px;
    height: 75vh;
}

.container {
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	max-width: none;
	margin-bottom: 2em;
}

.carousel {
	box-shadow: 0px 0px 16px rgb(0 0 0 / 90%);
}

h1,h2,h3,h4,h5,h6 {
    color: white;
    font-family: 'Lora', serif;
    text-align: center;
    margin: auto;
}

h1{
    margin-top: .5em;
    border-bottom: 1px solid white;
}

.modal-header h2{
    color: navy;
    padding: .2em;
}

p,li,a, label {
    font-family: 'Crimson Text', serif;
    color: lightgray;
}

article ul li , #Contact .row ul li{
    list-style: none;
    list-style-position: outside;
    padding: 1em;
    float: left;
}

#About {
	width: 100%;
	box-shadow: inset 0px 0px 16px rgb(0 0 0 / 90%);
	background: #1c1c1c;
	display: flex;
	flex-direction: row;
	justify-content: center;
	flex-wrap: wrap;

}

#About img{
	width: 40%;
	margin: 5%;
}

#blurb{
	width: 40%;
}

#About h1 {
	border-bottom: 1px solid white;
	width: 80%;
	margin-bottom: .5em;
}

#About img {
    border-radius: 50%;
    border: 2px white;
    border-style: groove;
    max-width: 15em;
    max-height: 15em;
    padding: 0;
}

#Skills {
	display: flex;
	flex-direction: row;
	background: #dce2e3;
	box-shadow: 0px 4px 16px black, 0px -2px 16px black ;
	margin-bottom: 0;
}

#skillBox {
	width: 45%;
	margin: 2.5%;
}

#skillBox h2 {
	color: black;
	border-bottom: 1px solid black;
}

#skillBox ul {
	list-style: none;
	padding: 0.5em;
}

#skillBox ul li{
	color: black;
	display: flex;
	flex-direction: row;
}

#skillBox ul li i{
	width: 10%;
	margin: 0;
	color: black;
}

#skillBox ul li span{
	width: 90%;
	margin: 0;
}

#toolBox {
	width: 45%;
	margin: 2.5%;
}

#toolBox h2 {
	color: black;
	border-bottom: 1px solid black;
}

#toolBox ul {
	list-style: none;
	padding: 0.5em;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

#toolBox ul li{
	width: 20%;
	margin: 5%;
	color: black;
	flex-direction: column;
	text-align: center;
}

#toolBox ul li img {
	width: 60%;
	margin: 0;
}


#Contact .row img {
    border-radius: 50%;
    border: 2px black;
    border-style: groove;
    max-width: 15em;
    max-height: 15em;
    padding: 0;
}

.modal-body h2, .modal-body p{
    color: black;
    text-align: center;
}

.modal-body a{
    color:blue;
    text-align: center;
    margin: auto;
}

.modal-body a:hover{
    color:darkmagenta;
}
.modal-body img{
    margin: auto;
}

article {
    padding: 2em;
}

div #Portfolio{
    background-color: #dce4ef;
}

footer{
    background-color: lightgray;
    color: black;
}

.row a img{
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

#Portfolio .row {
    padding-top: 1em;
}

#Portfolio .row a{
    padding: 0;
}

#Portfolio .row a:hover{
    opacity: .6;
}

i{
    color: lightskyblue;
}

i:hover{
    color: aqua;
}

.navbar {
	box-shadow: 0px 0px 16px rgb(0 0 0 / 90%);
}

form {
    width: 80%;
    margin: auto;
    margin-top: 1em;
    margin-bottom: 1em;
    padding: .4em;
    background-color: rgba(0, 0, 0, .7);
    border: 2px solid gold;
    border-style: groove;
}

label {
    display:block;
    margin-top:20px;
    letter-spacing:2px;
    text-align: center;
}

input, textarea {
    margin-left: 10%;
    width:inherit;
    height:27px;
    background:#efefef;
    border-radius:5px;
    border:1px solid #dedede;
    padding:10px;
    margin-top:3px;
    font-size:0.9em;
    color:#3a3a3a;
}

textarea {
    height:213px;
    font-family:Arial, Helvetica, sans-serif;
}

button{
    margin: auto;
    margin-top: .2em;
    margin-bottom: .2em;
}

.row p,h4{
    text-align: center;
}

#Contact .row img{
    margin: auto;
}

